flux/apps/hoyeslab/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: qbt-http
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: prowlarr-http
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
