flux/apps/hoyeslab/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: qbittorrent.hoyes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
  tls:
    - hosts:
        - qbittorrent.hoyes.dev
      secretName: hoyes-dev-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: prowlarr.hoyes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: http
  tls:
    - hosts:
        - prowlarr.hoyes.dev
      secretName: hoyes-dev-tls
